--- a/Lecture 2_Think_Python_Ch1_to_Ch3_Exercises.ipynb
+++ b/Lecture 2_Think_Python_Ch1_to_Ch3_Exercises.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "id": "544b787d",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[61]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mSum:\u001b[39m\u001b[33m\"\u001b[39m, add(\u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m))\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mresult\u001b[49m)  \u001b[38;5;66;03m# This will raise an error because result is local to add()\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Your code here to define and call more functions with local variables\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[75]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mSum:\u001b[39m\u001b[33m\"\u001b[39m, add(\u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m))\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mresult\u001b[49m)  \u001b[38;5;66;03m# This will raise an error because result is local to add()\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Your code here to define and call more functions with local variables\u001b[39;00m\n",
       "\u001b[31mNameError\u001b[39m: name 'result' is not defined"
      ]
     }
@@ -573,7 +573,18 @@
    "execution_count": null,
    "id": "a62fffb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1\n",
+      "Iteration 2\n",
+      "Iteration 3\n",
+      "Iteration 4\n"
+     ]
+    }
+   ],
    "source": [
     "# Loops\n",
     "# Use for loops to repeat actions\n",
@@ -596,10 +607,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "afada623",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Force: 500 N → Stress: 100000.00 Pa → OK\n",
+      "Force: 1000 N → Stress: 200000.00 Pa → OK\n",
+      "Force: 1500 N → Stress: 300000.00 Pa → OK\n",
+      "Force: 2000 N → Stress: 400000.00 Pa → Exceeds yield limit!\n"
+     ]
+    }
+   ],
    "source": [
     "forces = [500, 1000, 1500, 2000]  # in Newtons\n",
     "area = 0.005  # cross-sectional area in m²\n",
@@ -625,10 +647,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "35dd4dc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pytho\n"
+     ]
+    }
+   ],
    "source": [
     "print(text[:5]) # NameError: name 'text' is not defined. Need to define 'text' first.\n",
     "\n",
@@ -651,9 +681,22 @@
    "execution_count": null,
    "id": "43c4cd1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here"
+    "# Code here\n",
+    "import math             #import math module\n",
+    "int(math.sqrt(25))      #square root 25 through module, return int value"
    ]
   },
   {
@@ -661,9 +704,28 @@
    "execution_count": null,
    "id": "06be2c70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here"
+    "# Code here\n",
+    "for i in range(1, 11):  #numbers 1-10\n",
+    "    print(i)            #print the value"
    ]
   },
   {
@@ -671,9 +733,21 @@
    "execution_count": null,
    "id": "2d31697c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw -123.456 Absolute 123.456 Rounded -123.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here"
+    "# Code here\n",
+    "x=-123.456                                      #Base number\n",
+    "y= abs(x)                                       #absolute value of the base\n",
+    "z= round(x, 1)                                  #round the base to the first decimal\n",
+    "print(\"Raw\", x, \"Absolute\", y, \"Rounded\", z)"
    ]
   }
  ],
